# Thesis-Repository-of-STM32L432KC-Proyects

./: .cproject  .project  BEGINNER_STM32L432KC Debug.launch  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  STM32L432KCUX_FLASH.ld  adc_test.c
Core/Inc/: main.h
Core/Src/: adc_dma_test.c  adc_dma_tim_test.c  adc_test.c  exti_PB_TEST.c  main.c  printf_redirect.c
Debug/: BEGINNER_STM32L432KC.elf  BEGINNER_STM32L432KC.list  BEGINNER_STM32L432KC.map  makefile  objects.list  sources.mk
Debug/Core/Src/: adc_dma_test.d  adc_dma_tim_test.d  adc_test.cyclo  adc_test.d  adc_test.su  exti_PB_TEST.d  printf_redirect.cyclo  printf_redirect.d  printf_redirect.su  subdir.mk  system_stm32l4xx.d
Debug/Peripherals/Src/: adc.cyclo  adc.d  adc.su  exti.cyclo  exti.d  exti.su  gpio.cyclo  gpio.d  gpio.su  rcc.cyclo  rcc.d  rcc.su  subdir.mk  tim.cyclo  tim.d  tim.su  usart.cyclo  usart.d  usart.su
Debug/Src/: subdir.mk
Debug/Startup/: startup_stm32l432xx.d  subdir.mk
Peripherals/Inc/: adc.h  exti.h  gpio.h  rcc.h  tim.h  usart.h
Peripherals/Src/: adc.c  exti.c  gpio.c  rcc.c  tim.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
